--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 Hello, world!!!
+Git - система управления версиями с распределенной архитектурой
+GitHub - служба размещения в Интернете репозиториев Git
 </body>
-<h1>Hello, world!!!!</h1>
+<h1>Я учусь работать с GIT</h1>
 </body>
 </html>
